<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Game</string>
    <string name="logo">logo</string>
    <string name="viewpager_image">viewPager_image</string>
    <string name="for_you">For you</string>
    <string name="top_charts">Top charts</string>
    <string name="children">Children</string>
    <string name="premium">Premium</string>
    <string name="categories">Categories</string>
    <string name="email_com">email.com</string>
    <string name="vpgames">vpGames</string>
    <string name="vpapps">vpapps</string>
    <string name="vphome">vphome</string>
    <string name="item1">item1</string>
    <string name="rcvhome">rcvhome</string>
    <string name="rcvapps">rcvapps</string>
    <string name="rcvgames">rcvgames</string>
    <string name="splashLogo">splashLogo</string>
    <string name="create_account">Get Started</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="createaccount">Create an account✨</string>
    <string name="Login">Login to your Account✨</string>
    <string name="profilebtn">profileBtn</string>
    <string name="cancelbtn">cancelbtn</string>
    <string name="users_username">Ansh singh</string>
    <string name="users_email">email</string>
    <string name="account_setup">Account Setup</string>
    <string name="managing_apps">Manage apps and device</string>
    <string name="notifications_and_offers">Notifications and offers</string>
    <string name="payments_and_subscriptions">Payments and subscriptions</string>
    <string name="privacy_and_security">Privacy and security</string>
    <string name="library">Library</string>
    <string name="app_pass">App pass</string>
    <string name="points">Points</string>
    <string name="settings">Settings</string>
    <string name="helps_and_feedback">Helps and feedback</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="Term_services">Terms of service\n</string>
    <string name="introimage">introImage</string>
    <string name="welcome_to_store">Welcome to Store</string>
    <string name="get_started">Let\'s Begin</string>
    <string name="waveimage">waveImage</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="recommended_for_you">Recommended for you</string>
    <string name="suggested_for_you">Suggested for you</string>
    <string name="sponsored">Sponsored</string>
    <string name="type">type</string>
    <string name="rating">rating</string>
</resources>