<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/appbar"
    tools:context=".activity.IntroActivity">

    <!-- Vertical LinearLayout for main components -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="16dp">

        <!-- Main Image centered horizontally -->
        <ImageView
            android:id="@+id/mainImage"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:contentDescription="@string/introimage"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_introapps" />

        <!-- TextView below the main image -->
        <TextView
            android:id="@+id/mainText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="8dp"
            android:text="@string/welcome_to_store"
            android:textColor="@color/black"
            android:textSize="27sp"
            android:textStyle="bold" />

        <!-- Button below the text -->
        <Button
            android:id="@+id/IntroBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:gravity="center"
            android:backgroundTint="?attr/colorPrimary"
        app:cornerRadius="8dp"
        android:padding="8dp"
        android:text="@string/get_started"
        android:textSize="16sp"
        android:layout_marginHorizontal="15dp" />

    </LinearLayout>

    <!-- Bottom Image aligned to the bottom of the FrameLayout -->
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="90dp"
        android:layout_gravity="bottom|center_horizontal"
        android:contentDescription="@string/waveimage"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_wavestore" />

</FrameLayout>
