<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="12dp">

    <androidx.cardview.widget.CardView
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:elevation="3dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="16dp">

        <ImageView
            android:id="@+id/recommended_app_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:contentDescription="@string/rcvapps"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_launcher_background"
            />
    </androidx.cardview.widget.CardView>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/recommended_app_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12dp"
            android:fontFamily="serif"
            android:text="@string/item1"
            android:textColor="@color/DarkGray"
            android:textSize="16sp"
            android:textStyle="normal" />
        <TextView
            android:id="@+id/type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginHorizontal="12dp"
            android:text="@string/type"
            android:textColor="@color/LightGray"
            android:textSize="12sp"
            android:textStyle="normal" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <TextView
                android:id="@+id/rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rating"
                android:layout_marginTop="2dp"
                android:layout_marginHorizontal="12dp"
                android:textColor="@color/LightGray"
                android:textSize="12sp"
                android:textStyle="normal" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="size"
                android:layout_marginTop="2dp"
                android:layout_marginStart="2dp"
                android:textColor="@color/LightGray"
                android:textSize="12sp"
                android:textStyle="normal" />
        </LinearLayout>
    </LinearLayout>


</LinearLayout>