<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:elevation="3dp"
    app:cardCornerRadius="15dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


            <ImageView
                android:id="@+id/vp_Games_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/vphome"
                android:scaleType="centerCrop" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal"
            android:padding="12dp">

            <androidx.cardview.widget.CardView
                android:layout_width="65dp"
                android:layout_height="65dp"
                android:elevation="3dp"
                app:cardBackgroundColor="@android:color/transparent"
                app:cardCornerRadius="16dp">

                <ImageView
                    android:id="@+id/vpg_innerImage"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:contentDescription="@string/rcvapps"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_settings" />
            </androidx.cardview.widget.CardView>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/vpg_innertext"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="12dp"
                    android:fontFamily="serif"
                    android:text="@string/item1"
                    android:textColor="@color/DarkGray"
                    android:textSize="16sp"
                    android:textStyle="normal" />
            </LinearLayout>


        </LinearLayout>
    </RelativeLayout>


</androidx.cardview.widget.CardView>